syntax = "proto3";
import "Code.proto";
import "Common.proto";
package Message;

// 同步服务器时间
message C2SPing {}   // IRequest
message S2CPong {// IResponse
  int64 time = 1;   //服务器时间
}
// 通知测试
message CNotifyTest {}   // IRequest

//  推送测试
message SPushTest {}  // IResponse

// 登录游戏服务器 第一条消息 从这里开始
message C2SLogin {// IRequest

  uint64 playerId = 1; //选择的角色
  string key = 2;  //登录验证
  string unused = 3;
}
message S2CLogin {// IResponse
  Role role = 1;
}
//  角色信息
message Role {
  uint64 uid = 1;           //角色id
  uint32 tid = 2;           //模板id
  string name = 3;          //名
  int64 lastLoginTime = 4;  //最近一次登录时间
  int64 lastOfflineTime = 5;  //最近一次下线时间 (上线大于离线表示在线)
  uint64 exp = 6;             //经验 --等级靠换算
  map<int32, uint64> currencyBag = 7;  //货币
  repeated Item itemBag = 8;           //道具背包--角色背包
  repeated Hero heroBag = 9;           //武将背包
  repeated Equip equipBag = 10;         //装备背包
}
// 同步奖励
message SSyncReward {// IResponse
  repeated Item adds = 1;
  repeated Item dels = 2;
}
//  邮件详情
message Mail {
  uint64 uid = 1;              //唯一id
  uint32 tid = 2;              //模板id
  string customTitle = 3;      //自定义标题 覆盖默认
  string customContent = 4;    //自定义内容 覆盖默认
  repeated string params = 5;  //参数列表
  int64 recvTime = 6;          //获得时间
  bool hasRead = 7;            //是否阅读
  bool hasGet = 8;             //是否领取
}
// 获取邮件列表
message C2SMails {} // IRequest
message S2SMails {// IResponse
  repeated Mail mails = 1;
}